[package]
name = "avahi-sys"
version = "0.10.0"
authors = ["Peter Marheine <peter@taricorp.net>", "Walker Crouse <walkercrouse@hotmail.com>"]
edition = "2018"
description = "Bindings to Avahi, a library for zero-configuration networking."
readme = "README.md"
homepage = "https://github.com/windy1/avahi-sys"
repository = "https://github.com/windy1/avahi-sys"
license = "LGPL-3.0"
keywords = ["avahi", "zeroconf", "mdns", "bonjour", "dnssd"]
categories = ["api-bindings", "external-ffi-bindings", "network-programming", "os", "os::linux-apis"]
build = "build.rs"

[features]
default = []
buildtime_bindgen = []

[build-dependencies]
bindgen = "0.63"

[dependencies]
libc = "0.2.77"
